bk_ida/gccida/c1/maybe_read_dollar_number
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_read_dollar_number/src/c-format.c:1592:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // [rsp+0h] [rbp-38h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_read_dollar_number/src/c-format.c:1597:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[v10] & 4) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_read_dollar_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_read_dollar_number/src/c-format.c:1601:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[*( unsigned __int8 *)v9] & 4) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_read_dollar_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_read_dollar_number/src/c-format.c:1617:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[( unsigned __int8)v10] & 4) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_read_dollar_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/maybe_read_dollar_number/src/obj/c-format.o] Error 1
